docs: Fix missing wrapping in Safari

--- a/sass/styleguide/styleguide.scss
+++ b/sass/styleguide/styleguide.scss
@@ -180,6 +180,11 @@ $shadow--primary: 0 2px 4px rgba(252, 196, 196, 1);
 .sg-components-transportationchip-list {
   line-height: 32px !important;
 
+  > div {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   & + & {
     margin-top: dbx-spacing('xl');
   }
